<resources>
    <string name="app_name">ForeverFitness</string>
    <string name="title_home">Home</string>
    <string name="title_daily_entries">Entries</string>
    <string name="title_pictures">Pictures</string>
    <string name="title_history">History</string>
    <string name="title_settings">Settings</string>
    <string name="weekly_weight_loss_average">Weekly weight loss average:</string>
    <string name="weight_loss_to_date">Weight loss to date:</string>
    <string name="current_weight">Current weight:</string>
    <string name="statistics">Statistics</string>
    <string name="fragment_selector">Fragment Selector</string>
    <string name="weight_entry">Weight Entry</string>
    <string name="daily_weight_entry">Daily Weight Entry</string>
    <string name="required">*required:</string>
    <string name="add_your_current_weight">Add your Current Weight</string>
    <string name="created_by_nkechi_nnaji">Created by Nkechi Nnaji</string>
    <string name="forever_fitness">Forever Fitness</string>
    <string name="welcome_image">welcome image</string>
    <string name="everything_you_need_to_keep_a_healthy_weight">Everything you need to keep a healthy weight</string>
    <string name="view_progress">View your progress and analytics</string>
    <string name="reach_goal">Reach your goal weight and stay healthy</string>
    <string name="skip">Skip</string>
    <string name="next">Next</string>
    <string name="create_a_profile">Create a profile</string>
    <string name="enter_name_nickname">Enter name / nickname</string>
    <string name="your_profile">Your Profile</string>
    <string name="enter_sex">Enter sex</string>
    <string name="take_a_picture">Take A Picture</string>
    <string name="take_picture">Take a Picture</string>
    <string name="last_entry_date">Last entry date:</string>
    <string name="date_format">yyyyMMdd_HHmmss</string>
    <string name="jpeg_format">JPEG_</string>
    <string name="under_score">_</string>
    <string name="jpeg_extension">.jpg</string>
    <string name="provider">.provider</string>
    <string name="date_divider">/</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="sex">Sex :</string>
</resources>
