<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment">


    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/toolbar_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/statistics"
            android:textAppearance="@style/Fitness.TextAppearance.AppCompat.Title.Regular" />

        <ImageView
            android:id="@+id/toolbar_profile_iv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:paddingEnd="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:src="@drawable/ic_profile" />

    </androidx.appcompat.widget.Toolbar>


    <TextView
        android:id="@+id/text_current_weight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/current_weight"
        android:textAppearance="@style/Fitness.TextAppearance.AppCompat.Subhead.Regular"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.068" />

    <TextView
        android:id="@+id/text_weight_loss"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/weight_loss_to_date"
        android:textAppearance="@style/Fitness.TextAppearance.AppCompat.Subhead.Regular"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.119" />

    <TextView
        android:id="@+id/text_weekly_weight_loss"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/weekly_weight_loss_average"
        android:textAppearance="@style/Fitness.TextAppearance.AppCompat.Subhead.Regular"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.177" />

    <View
        android:id="@+id/blue_bar_view"
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:background="@color/primary_dark"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.253" />

    <TextView
        android:id="@+id/browse_content_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:text="Browse By Content"
        android:textAppearance="@style/Fitness.TextAppearance.AppCompat.Headline.Regular"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/blue_bar_view" />


    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/setup_tile"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/primary"
        android:elevation="4dp"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingTop="24dp"
        android:paddingBottom="24dp"
        app:layout_constrainedHeight="true"
        app:layout_constrainedWidth="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintDimensionRatio="4:3"
        app:layout_constraintStart_toStartOf="@+id/browse_content_label"
        app:layout_constraintTop_toBottomOf="@+id/browse_content_label"
        app:layout_constraintVertical_bias="0.0">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/setup_iv"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/ic_setup" />


        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:minEms="5"
            android:text="Setup"
            android:textAllCaps="true"
            android:textAppearance="@style/Fitness.TextAppearance.AppCompat.Body1.Regular" />

    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/weight_entry_tile"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/primary"
        android:elevation="4dp"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingTop="24dp"
        android:paddingBottom="24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintDimensionRatio="4:3"
        app:layout_constraintEnd_toEndOf="@+id/browse_content_label"
        app:layout_constraintTop_toBottomOf="@+id/browse_content_label"
        app:layout_constraintVertical_bias="0.0">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/weight_entry_iv"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/ic_weight_entries" />


        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:minEms="5"
            android:text="Weight Entry"
            android:textAllCaps="true"
            android:textAppearance="@style/Fitness.TextAppearance.AppCompat.Body1.Regular" />


    </androidx.appcompat.widget.LinearLayoutCompat>


    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/history_tile"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/primary"
        android:elevation="4dp"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingTop="24dp"
        android:paddingBottom="24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintDimensionRatio="4:3"
        app:layout_constraintStart_toStartOf="@+id/setup_tile"
        app:layout_constraintTop_toBottomOf="@+id/setup_tile"
        app:layout_constraintVertical_bias="0.138">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/history_iv"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/ic_history_iv" />


        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:minEms="5"
            android:text="History"
            android:textAllCaps="true"
            android:textAppearance="@style/Fitness.TextAppearance.AppCompat.Body1.Regular" />

    </androidx.appcompat.widget.LinearLayoutCompat>


    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/picture_entry_tile"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/primary"
        android:elevation="4dp"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingTop="24dp"
        android:paddingBottom="24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintDimensionRatio="4:3"
        app:layout_constraintEnd_toEndOf="@+id/browse_content_label"
        app:layout_constraintTop_toTopOf="@+id/history_tile"
        app:layout_constraintVertical_bias="0.0">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/picture_iv"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/ic_picture_entries_iv" />


        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:minEms="5"
            android:text="Picture Entry"
            android:textAllCaps="true"
            android:textAppearance="@style/Fitness.TextAppearance.AppCompat.Body1.Regular" />


    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.constraintlayout.widget.ConstraintLayout>