<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".segments.profile.ProfileActivity">


    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="32dp"
        tools:layout_editor_absoluteX="-30dp">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:gravity="center"
            android:text="@string/edit_profile"
            android:textAppearance="@style/Fitness.TextAppearance.AppCompat.Headline.Regular" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:orientation="horizontal"
            android:weightSum="1">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="32dp"
                android:layout_weight="0.1"
                android:text="Name:" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/edit_username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="16dp"
                android:layout_weight="0.5"
                android:hint="@string/enter_name_nickname" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:orientation="horizontal"
            android:weightSum="1">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="32dp"
                android:layout_weight="0.1"
                android:text="DOB :" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/edit_date_of_birth"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="16dp"
                android:onClick="editBirthday"
                android:layout_weight="0.5"
                android:hint="Enter date of birth" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:orientation="horizontal"
            android:weightSum="1">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_weight="0.1"
                android:text="@string/sex" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/edit_sex"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:layout_weight="0.5"
                android:hint="@string/enter_sex" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:orientation="horizontal"
            android:weightSum="1">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="32dp"
                android:layout_weight="0.1"
                android:text="Current Weight (LBS) :" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/edit_current_weight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="16dp"
                android:layout_weight="0.5"
                android:maxLength="3"
                android:hint="Enter current weight" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:orientation="horizontal"
            android:weightSum="1">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="32dp"
                android:layout_weight="0.1"
                android:text="Entry Date :" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/edit_entry_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="16dp"
                android:layout_weight="0.5"
                android:onClick="editEntryDate"
                android:hint="mm/dd/yyyy" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:orientation="horizontal"
            android:weightSum="1">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="32dp"
                android:layout_weight="0.1"
                android:text="Target Weight (LBS) :" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/edit_target_weight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="16dp"
                android:layout_weight="0.5"
                android:maxLength="3"
                android:hint="Enter target goal weight" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:orientation="horizontal"
            android:weightSum="1">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="32dp"
                android:layout_weight="0.1"
                android:text="Height (Feet) :" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/edit_height"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="16dp"
                android:layout_weight="0.5"
                android:hint="Enter height" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:orientation="horizontal"
            android:weightSum="1">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="32dp"
                android:layout_weight="0.1"
                android:text="Email :" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/edit_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="16dp"
                android:layout_weight="0.5"
                android:hint="Enter email address" />

        </LinearLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/edit_save_button"
            style="@style/Fitness.TextAppearance.AppCompat.Body2.Medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:ems="10"
            android:gravity="center"
            android:letterSpacing="0.4"
            android:text="SAVE"
            app:backgroundTint="@android:color/transparent"
            app:cornerRadius="2dp"
            app:strokeColor="@color/primary"
            app:strokeWidth="1dp"
            android:onClick="updateProfileContent"
            android:textColor="@color/primary"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/edit_cancel_button"
            style="@style/Fitness.TextAppearance.AppCompat.Body2.Medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:ems="10"
            android:gravity="center"
            android:letterSpacing="0.4"
            android:text="CANCEL"
            app:backgroundTint="@android:color/transparent"
            android:onClick="cancelProfileUpdate"
            app:cornerRadius="2dp"
            app:strokeColor="@color/primary"
            app:strokeWidth="1dp" />
    </androidx.appcompat.widget.LinearLayoutCompat>
</ScrollView>
